--- a/productos.html
+++ b/productos.html
@@ -61,7 +61,7 @@
       <!-- TERCERA CARTA -->
       <div class="card-p">
         <div class="face-p front-p">
-          <img src="img/BOLA.png" alt="" />
+          <img src="img/bola.png" alt="" />
           <h3>PELOTA PARA MORDER</h3>
         </div>
         <div class="face-p back-p">
