--- a/registro.html
+++ b/registro.html
@@ -37,7 +37,7 @@
                 <fieldset class="informacionCliente">
                     <h1>Crea tu cuenta</h1>
                    
-                    <input type="email" required>
+                    <input type="text" required>
                     <label for="" class="nombre">
                         <i class='bx bxs-user-circle' ></i>
                         Nombre Completo
